k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: aviz-demo
  labels:
    app: aviz-demo
    env: staging
